2.9.5.6 and more fixes